2001-04-30  Bruno Haible  <haible@clisp.cons.org>

	Silence "gcc -Wall -Wwrite-strings" warnings.
	* localcharset.c (charset_aliases): Change type to 'const char *'.
	(get_charset_aliases): Change type of 'cp' to 'const char *'.

2001-04-19  Bruno Haible  <haible@clisp.cons.org>

	* gettext-0.10.37 released.

2001-04-04  Bruno Haible  <haible@clisp.cons.org>

	* mbswidth.h: New file, from textutils-2.0.13 with modifications.
	* mbswidth.c: Likewise.
	* Makefile.am (noinst_HEADERS): Add mbswidth.h.
	(libnlsut_a_SOURCES): Add mbswidth.c.

2001-04-04  Bruno Haible  <haible@clisp.cons.org>

	* linebreak.h (UC_BREAK_UNDEFINED): New enum value.
	(u8_width_linebreaks, u16_width_linebreaks, u32_width_linebreaks,
	mbs_width_linebreaks): Add overrides argument.
	* linebreak.c (u8_width_linebreaks, u16_width_linebreaks,
	u32_width_linebreaks, mbs_width_linebreaks): Add overrides argument.

2001-03-29  Bruno Haible  <haible@clisp.cons.org>

	* gettext-0.10.36 released.

2001-03-21  Bruno Haible  <haible@clisp.cons.org>

	* linebreak.c: Include string.h, needed for memset() declaration.

2001-03-11  Bruno Haible  <haible@clisp.cons.org>

	* xmalloc.c (fixup_null_alloc): Unify messages.

2001-03-10  Bruno Haible  <haible@clisp.cons.org>

	* linebreak.c (iconv_string_length): Don't call
	iconv(cd,NULL,NULL,NULL,NULL) on glibc-2.1; it crashes.

	* localcharset.c (locale_charset): Allow wildcard syntax. Resolve
	alias also if codeset is empty.
	* config.charset (BeOS): Use wildcard syntax.

2001-03-09  Bruno Haible  <haible@clisp.cons.org>

	* config.charset: Update from libiconv-1.6.
	* localcharset.c: Likewise.

2001-03-04  Bruno Haible  <haible@clisp.cons.org>

	* system.h (ISSLASH, HAS_DEVICE, IS_ABSOLUTE_PATH, IS_PATH_WITH_DIR,
	FILESYSTEM_PREFIX_LEN): New macros.
	(concatenated_pathname): New declaration.
	(SET_BINARY): New macro.
	* concatpath.c: New file.
	* Makefile.am (libnlsut_a_SOURCES): Add concatpath.c.

2001-03-03  Bruno Haible  <haible@clisp.cons.org>
