@@ -1,3 +1,8 @@
+2001-05-02  Bruno Haible  <haible@clisp.cons.org>
+
+	* linebreak.c (iconv_string_keeping_offsets): Work around a glibc-2.1
+	bug.
+
 2001-04-30  Bruno Haible  <haible@clisp.cons.org>
 
 	Silence "gcc -Wall -Wwrite-strings" warnings.
